# Weather_forecasting_with_MLOps

./: .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
mlops_services/: dvc_pipeline.yaml  main.py  pyproject.toml
mlops_services/config/: weather_data.yaml
mlops_services/data/: historical_weather_data_blr.csv
mlops_services/src/components/: retrieve.py
mlops_services/src/services/: 01_ingest.py  02_train.py  03_inference.py
mlops_services/src/utils/: data_validation.py  db_tools.py
notebooks/: db.ipynb  logging_using_ml_flow.ipynb  weather_data_base_model.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/855e2bb4a56b456cb2b1ce0219beb7c4/: meta.yaml
notebooks/mlruns/0/855e2bb4a56b456cb2b1ce0219beb7c4/metrics/: mape  rmse
notebooks/mlruns/0/855e2bb4a56b456cb2b1ce0219beb7c4/outputs/m-f04e50fcf8c1417385ae94b5ae03ebb6/: meta.yaml
notebooks/mlruns/0/855e2bb4a56b456cb2b1ce0219beb7c4/tags/: mlflow.runName  mlflow.source.name
notebooks/mlruns/0/models/m-f04e50fcf8c1417385ae94b5ae03ebb6/: meta.yaml
notebooks/mlruns/0/models/m-f04e50fcf8c1417385ae94b5ae03ebb6/artifacts/: MLmodel  conda.yaml  python_model.pkl  requirements.txt
notebooks/mlruns/0/models/m-f04e50fcf8c1417385ae94b5ae03ebb6/metrics/: mape  rmse
scripts/: db_remove.sh  db_start.sh  docker_start.sh  docker_stop.sh
web_ui/: pyproject.toml
